1. Улучшения Collection API[70623#281417]